# talos_cli

./: README.md  main.py  pyproject.toml  requirements.txt
cli/: main.py
src/cli/: main.py
