[project]
name = "llm_orchestrator"
version = "0.1.0"
description = "Orchestrates LLM agent DAGs via YAML"
authors = [
  { name = "Abhijnan Acharya", email = "abhijnanacharya11@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
  "openai",
  "pyyaml",
  "python-dotenv",
  "schedule",
  "imaplib2",
  "requests",
  "beautifulsoup4",
  "typer[all]"
]

[project.scripts]
talos = "cli.main:run_cli"


[tool.setuptools]
packages = [
  "cli",
  "orchestrator",
  "email_client",
  "utils"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"